@@ -28,5 +28,6 @@ void contextMenuActivate(GtkMenuItem *menuitem,contextStruct *ctx);
 void selectItem(GtkIconView *icon_view,GtkTreePath *tree_path,pageStruct *page);
 gboolean doDrop(GtkWidget *icon,GdkDragContext *context,int x,int y,unsigned time,pageStruct *page);
 void closeTab(GtkButton *button,pageStruct *page);
+void openDisk(GtkIconView *icon_view,GtkTreePath *tree_path,gpointer *userdata);
 
 #endif
