@@ -102,6 +102,9 @@ int main(int argc,char **argv)
 	else
 		startdir=(char*)"/";
 	toolBarLayout=strdup("NUBFHL");
+	diskIncludePattern=strdup("*sd[abc][1-9]*");
+//	diskExcludePattern=strdup("\(sda[123456]$\|sdb4\)");
+	diskExcludePattern=strdup("\\(sda[123456]$\\|sda13\\)");
 
 	gtk_init(&argc,&argv);
 	defaultTheme=gtk_icon_theme_get_default();
